style: Customize primary menu

--- a/web/themes/custom/geoffreyvanwykdev/templates/block/block--mainnavigation.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/block/block--mainnavigation.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Default theme implementation for a menu block.
+ * Theme override for a main navigation menu block.
  *
  * Available variables:
  * - plugin_id: The ID of the block implementation.
@@ -30,11 +30,10 @@
  * See http://juicystudio.com/article/screen-readers-display-none.php and
  * http://www.w3.org/TR/WCAG-TECHS/H42.html for more information.
  *
- * @ingroup themeable
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }}>
+<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.addClass(['tw-flex', 'tw-items-center', 'tw-text-gray-300'])|without('role', 'aria-labelledby') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {% if not configuration.label_display %}
     {% set title_attributes = title_attributes.addClass('visually-hidden') %}
