--- a/web/themes/custom/geoffreyvanwykdev/templates/layout/region--primary-menu.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/layout/region--primary-menu.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Default theme implementation to display a region.
+ * Theme override to display a region.
  *
  * Available variables:
  * - content: The content for this region, typically blocks.
@@ -10,12 +10,22 @@
  *   .info.yml file.
  *
  * @see template_preprocess_region()
- *
- * @ingroup themeable
  */
 #}
 {% if content %}
-  <div{{ attributes }}>
+  <div{{ attributes.addClass([
+    'tw-bg-gradient-to-br',
+    'tw-from-gray-700',
+    'tw-to-gray-900',
+    'tw-shadow-lg',
+    'tw-p-6',
+    'tw-rounded',
+    'tw-text-white',
+    'tw-font-semibold',
+    'tw-flex',
+    'tw-justify-between',
+    'tw-items-center',
+  ]) }}>
     {{ content }}
   </div>
 {% endif %}
