--- a/web/themes/custom/geoffreyvanwykdev/templates/block/block--mainnavigation.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/block/block--mainnavigation.html.twig
@@ -33,7 +33,10 @@
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.addClass(['tw-flex', 'tw-items-center', 'tw-text-gray-300'])|without('role', 'aria-labelledby') }}>
+<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.addClass([
+  'tw-flex',
+  'tw-items-center',
+])|without('role', 'aria-labelledby') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {% if not configuration.label_display %}
     {% set title_attributes = title_attributes.addClass('visually-hidden') %}
