--- a/web/themes/custom/geoffreyvanwykdev/templates/block/block--sitebranding.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/block/block--sitebranding.html.twig
@@ -22,7 +22,7 @@
         </div>
     </a>
   {% endif %}
-    <figcaption class="tw-pl-4 tw-flex tw-flex-col tw-items-start tw-justify-center">
+    <figcaption class="tw-pl-4 tw-flex tw-flex-col tw-items-start tw-justify-center tw-font-semibold tw-text-white">
   {% if site_name %}
     <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
   {% endif %}
