style: Make primary menu responsive

--- a/web/themes/custom/geoffreyvanwykdev/templates/layout/region--primary-menu.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/layout/region--primary-menu.html.twig
@@ -21,6 +21,7 @@
     'tw-p-6',
     'tw-rounded',
     'tw-flex',
+    'tw-flex-wrap',
     'tw-justify-between',
     'tw-items-center',
   ]) }}>
