style: Move background pattern to body tag
With the background pattern on the page template, the background does not always cover the whole screen.

--- a/web/themes/custom/geoffreyvanwykdev/templates/layout/page.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/layout/page.html.twig
@@ -45,7 +45,7 @@
  * @ingroup themeable
  */
 #}
-<div class="layout-container tw-p-6 tw-h-screen tw-bg-repeat tw-heropattern-circuitboard-gray-400">
+<div class="layout-container tw-p-6">
 
   <header role="banner">
     {{ page.header }}
