style: Login form
Closes #7

--- a/web/themes/custom/geoffreyvanwykdev/templates/block/block--copyrightblock.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/block/block--copyrightblock.html.twig
@@ -28,7 +28,7 @@
  */
 #}
 <div{{ attributes.addClass([
-  'tw-text-white',
+  'tw-text-gray-400',
   'tw-font-semibold',
 ]) }}>
   {{ title_prefix }}
