--- a/web/themes/custom/geoffreyvanwykdev/templates/layout/page--user--login.html.twig
+++ b/web/themes/custom/geoffreyvanwykdev/templates/layout/page--user--login.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override to display a single page.
+ * Theme override to display the login page.
  *
  * The doctype, html, head and body tags are not in this template. Instead they
  * can be found in the html.html.twig template in this directory.
@@ -63,7 +63,7 @@
   <main role="main" class="tw-h-3/4">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
-    <div class="layout-content tw-h-full">
+    <div class="layout-content tw-h-full tw-flex tw-justify-center tw-items-center">
       {{ page.content }}
     </div>{# /.layout-content #}
 
